[gd_scene load_steps=2 format=2]

[ext_resource path="res://InputParser.gd" type="Script" id=1]

[node name="InputParser" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -400.0
margin_right = -221.0
margin_bottom = 34.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextInputContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 419.0
margin_bottom = 387.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TextProcess" type="RichTextLabel" parent="VBoxContainer/TextInputContainer"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 409.0
margin_bottom = 377.0
bbcode_enabled = true
bbcode_text = "[color=gray]after process [/color][color=lime]in processing[/color][color=black] before process[/color]"
text = "after process in processing before process"

[node name="TextInput" type="TextEdit" parent="VBoxContainer/TextInputContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 409.0
margin_bottom = 377.0
text = "Text for testment"

[node name="ButtonContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 391.0
margin_right = 419.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ButtonContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 409.0
margin_bottom = 33.0
custom_constants/separation = 20

[node name="Feed" type="Button" parent="VBoxContainer/ButtonContainer/HBoxContainer"]
margin_right = 189.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Feed"

[node name="Clear" type="Button" parent="VBoxContainer/ButtonContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 399.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Clear"
[connection signal="feed" from="." to="." method="ParseWord"]
[connection signal="button_up" from="VBoxContainer/ButtonContainer/HBoxContainer/Feed" to="." method="Feed"]
[connection signal="button_up" from="VBoxContainer/ButtonContainer/HBoxContainer/Clear" to="." method="Clear"]
